WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39299
Accelerated compositing on Windows doesn't work on machines that don't support hardware vertex processing, but should
https://bugs.webkit.org/show_bug.cgi?id=39299
Summary
Accelerated compositing on Windows doesn't work on machines that don't suppor...
Adam Roben (:aroben)
Reported
2010-05-18 10:24:18 PDT
Accelerated compositing on Windows doesn't work on machines that don't support hardware vertex processing, but should. Safari's Top Sites and Cover Flow features work on these machines, for example.
Attachments
Make accelerated compositing work on machines that don't support hardware vertex processing
(2.46 KB, patch)
2010-05-18 10:29 PDT
,
Adam Roben (:aroben)
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-05-18 10:24:51 PDT
<
rdar://problem/7997692
>
Adam Roben (:aroben)
Comment 2
2010-05-18 10:29:40 PDT
Created
attachment 56389
[details]
Make accelerated compositing work on machines that don't support hardware vertex processing
Adam Roben (:aroben)
Comment 3
2010-05-18 10:58:04 PDT
Might be a dupe of
bug 38080
.
Adam Roben (:aroben)
Comment 4
2010-05-18 12:35:28 PDT
Committed
r59684
: <
http://trac.webkit.org/changeset/59684
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug