Make accelerated compositing work on machines that don't support hardware vertex processing

Fixes <http://webkit.org/b/39299> <rdar://problem/7997692> Accelerated
compositing on Windows doesn't work on machines that don't support
hardware vertex processing, but should

Reviewed by Eric Carlson.

* platform/graphics/win/WKCACFLayerRenderer.cpp:
(WebCore::WKCACFLayerRenderer::createRenderer): Query the device
capabilities to decide whether to request hardware or software vertex
processing.

Canonical link: https://commits.webkit.org/50820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59684 268f45cc-cd09-0410-ab3c-d52691b4dbfc